--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -14,25 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7bb86a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Hi Eileen! \n",
-      "\n",
-      "        \\   ^__^\n",
-      "         \\  (oo)\\_______\n",
-      "            (__)\\       )\\/\\\n",
-      "                ||----w |\n",
-      "                ||     ||\n",
-      "    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from main import cowsay\n",
     "\n",
@@ -46,11 +31,19 @@
    "source": [
     "![Eileen Collins](assets/astronaut.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "089d619e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -64,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
